--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+  <head>
+    <H1 style="color:white; font-family:Courier New, monospace" align="center">School Chat</H1>
+  </head>
 </html>
