--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
+  <head style="background-color:black;">
     <H1 style="color:white; font-family:Courier New, monospace" align="center">School Chat</H1>
   </head>
+  <body style="background-color:black;">
+    <div style="border-color:">
+      
+    </div>
+  </body>
 </html>
