--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <html>
+  <title>School chat</title>
   <head style="background-color:black;">
     <H1 style="color:white; font-family:Courier New, monospace" align="center">School Chat</H1>
   </head>
   <body style="background-color:black;">
-    <div style="border-color:">
+    <div style="border:5px solid rgb(253,98,98);">
       
     </div>
   </body>
