--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <title>School chat</title>
+  <link rel="icon" type="image/x-icon" href="Chat.png">
   <head style="background-color:black;">
     <H1 style="color:white; font-family:Courier New, monospace" align="center">School Chat</H1>
   </head>
