--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div style="border:5px solid rgb(253,98,98);">
       
     </div>
-    <div style="z-index:2;">
+    <div style="z-index:2; border:5px solid rgb(253,98,98); background-color:black;">
     </div>
   </body>
 </html>
